--- a/style.css
+++ b/style.css
@@ -87,8 +87,27 @@ input::-webkit-calendar-picker-indicator {
     background: #000;
     width: 100%;
     height: 100%;
+
     position: absolute;
     z-index: 4;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.yt-video-background.on button {
+    color: #fff;
+    background: var(--red-you-tube);
+    width: 40px;
+    height: 40px;
+    border-radius: 2rem;
+
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    z-index: 9;
+
     display: flex;
     justify-content: center;
     align-items: center;
