--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     --red-you-tube: #f00;
+    --bg: #000;
+    --bg-toggle: #0077FF;
 }
 
 * {
@@ -13,7 +15,7 @@ html {
 }
 
 body {
-    background: #000;
+    background: var(--bg);
 }
 
 #form {
@@ -46,6 +48,7 @@ input::-webkit-inner-spin-button {
     height: 40px;
     background: var(--red-you-tube);
     border-radius: 2rem;
+    display: inline-block;
 }
 
 .input-group:hover input,
@@ -84,7 +87,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .yt-video-background.on {
-    background: #000;
+    background: var(--bg);
     width: 100%;
     height: 100%;
 
@@ -111,4 +114,46 @@ input::-webkit-calendar-picker-indicator {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.theme {
+    margin: 2em 2em 0 0;
+    cursor: pointer;
+    width: 52px;
+    height: 27px; 
+    background: var(--bg-toggle);
+    float: right;
+    border-radius: 100px; 
+    position: relative;
+    z-index: 5;
+}
+
+.theme button {
+    position: absolute;
+    top: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 90px;
+    border: none;
+}
+
+.theme.on button {
+    left: 3px;
+}
+.theme button {
+    right: 3px;
+}
+
+input:checked + .toggle label {
+    color: #0077FF;
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
+}
+
+input:checked + .toggle label::after{
+}
+
+.toggle label:active:after {
+    width: 45px;
 }
