--- a/style.css
+++ b/style.css
@@ -150,3 +150,17 @@ button[onclick="Utils.toggle()"].on {
 .off {
     display: none;
 }
+
+body::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--bg);        
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--red-you-tube);  
+    border-radius: 0.5em;      
+}
