--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ html {
 
 body {
     background: var(--bg);
+    display: flex;
+    flex-direction: column;
 }
 
 #form {
@@ -124,10 +126,10 @@ button[onclick="Utils.toggle()"].on {
     width: 52px;
     height: 27px; 
     background: var(--bg-toggle);
-    float: right;
     border-radius: 100px; 
     position: relative;
-    z-index: 5;
+    float: right;
+    z-index: 999;
 }
 
 .theme button {
@@ -147,9 +149,6 @@ button[onclick="Utils.toggle()"].on {
     right: 3px;
 }
 
-.off {
-    display: none;
-}
 
 body::-webkit-scrollbar {
     width: 5px;
@@ -163,4 +162,24 @@ body::-webkit-scrollbar-corner {
 body::-webkit-scrollbar-thumb {
     background-color: var(--red-you-tube);  
     border-radius: 0.5em;      
+}
+
+.tumbnails {
+    margin-top: 4em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    /*display: inline-grid;
+    grid-template-columns: repeat(var(--frames-tumbnails), 1fr);*/
+    
+}
+
+.tumbnail > img{
+    width: 300px;
+    height: auto;
+}
+
+.off {
+    display: none;
 }
