--- a/styles/style.css
+++ b/styles/style.css
@@ -20,54 +20,7 @@ body {
     flex-direction: column;
 }
 
-#form,
-.menu {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-}
-
-/*----------------Input-----------------*/
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-.input-group {
-    display: flex;
-    justify-content: center;
-}
-
-.input-group input,
-.input-group button {
-    font-size: 2rem;
-    color: #fff;
-    padding-left: 1em;
-    margin: 0.5em;
-    width: 50%;
-    height: 40px;
-    background: var(--red-you-tube);
-    border-radius: 2em;
-    display: inline-block;
-}
-
-.input-group:hover input,
-.input-group:hover button{
-    opacity: 0.8;
-}
-
-.input-group input::placeholder {
-    color: #fff;
-    font-size: 2rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-}
-
+/*basis classes*/
 .sr-only {
     position: absolute;
     width: 1px;
@@ -80,105 +33,11 @@ input::-webkit-inner-spin-button {
     border-width: 0;
 }
 
-input::-webkit-calendar-picker-indicator {
-    opacity: 0;
-}
-
-/* yt-video */
-
-.yt-video-background {
-    background: var(--bg);
-    width: 100%;
-    height: 100%;
-
-    position: absolute;
-    z-index: 4;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-button#back-button {
-    color: #fff;
-    background: var(--red-you-tube);
-    width: 40px;
-    height: 40px;
-    border-radius: 2em;
-    border: none;
-
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    z-index: 9;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.theme {
-    margin: 4em 2em 0 0;
-    cursor: pointer;
-    width: 52px;
-    height: 27px; 
-    background: var(--bg-toggle);
-    border-radius: 100px; 
-    position: relative;
-    float: right;
-    z-index: 999;
-}
-
-.theme button {
-    position: absolute;
-    top: 3px;
-    width: 20px;
-    height: 20px;
-    background-color: #fff;
-    border-radius: 90px;
-    border: none;
-}
-
-.theme.on button {
-    left: 3px;
-}
-.theme button {
-    right: 3px;
-}
-
-
-body::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-}
-
-body::-webkit-scrollbar-corner {
-    background: var(--bg);
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: var(--red-you-tube);  
-    border-radius: 0.5em;      
-}
-
-.tumbnails {
-    margin-top: 4em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px; 
-}
-
-.tumbnail > img{
-    width: 300px;
-    height: auto;
-    cursor: pointer;
-}
-
 .off {
     display: none;
 }
 
+/* making user-agent responsive*/
 @media(max-width: 650px) {
     html {
         font-size: 50%;
@@ -192,7 +51,6 @@ body::-webkit-scrollbar-thumb {
 @media(max-width: 550px) {
     .tumbnail > img {
         width: 200px;
-
     }
 }
 
