--- a/styles/pages/yt-video.css
+++ b/styles/pages/yt-video.css
@@ -1,10 +1,10 @@
-.yt-video-background {
-    background: var(--bg);
-    width: 100%;
-    height: 100%;
+.yt-video {
+    position: absolute;   
+}
 
-    position: absolute;
-    z-index: 4;
+main  {
+    width: 100vw;
+    height: 100vh;
 
     display: flex;
     justify-content: center;
