--- a/styles/partials/inputs.css
+++ b/styles/partials/inputs.css
@@ -68,8 +68,8 @@ button#back-button {
     height: 27px; 
     background: var(--bg-toggle);
     border-radius: 100px; 
-    position: relative;
-    float: right;
+    position: absolute;
+    right: 3%;
     z-index: 999;
 }
 
@@ -86,6 +86,7 @@ button#back-button {
 .theme.on button {
     left: 3px;
 }
+
 .theme button {
     right: 3px;
 }
