--- a/styles/pages/tumbnails.css
+++ b/styles/pages/tumbnails.css
@@ -6,8 +6,27 @@
     gap: 20px; 
 }
 
-.tumbnail > a > img {
+.tumbnail >  a  img {
     width: 300px;
     height: auto;
     cursor: pointer;
+}
+
+.tumbnail > a img {
+    opacity: 0.5;
+}
+
+.tumbnail > a {
+    position: relative;
+}
+
+#x {
+    color: var(--color-x);
+}
+
+i.ph-x {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
