refactor: change uppercase to lowecase names

--- a/src/views/tumbnails.ejs
+++ b/src/views/tumbnails.ejs
@@ -34,7 +34,7 @@
     </main>
     
     <script src="/scripts/script.js"></script>
-    <script src="/scripts/ToggleTheme.js"></script>
+    <script src="/scripts/toggleTheme.js"></script>
     <script src="/scripts/tumbnails.js"></script>
 </body>
 </html>
