--- a/src/views/yt-video.ejs
+++ b/src/views/yt-video.ejs
@@ -34,7 +34,7 @@
     </main>
 
     <script src="/scripts/script.js"></script>
-    <script src="/scripts/ToggleTheme.js"></script>
-    <script src="/scripts/Video.js"></script>
+    <script src="/scripts/toggleTheme.js"></script>
+    <script src="/scripts/video.js"></script>
 </body>
 </html>
