--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,10 +17,7 @@
     
     <header>
         <div class="menu-section">
-            
-            <div class="theme" onclick="ToggleTheme.toggleTheme()">
-                <button type="button"></button>
-            </div>
+            <%- include('parts/page-header', {isbackreturn: false}) %> 
         </div>
     </header>
 
@@ -36,8 +33,8 @@
             </button>
         </div>      
     </div>
-        
-    <script src="/scripts/script.js"></script>
+
+    <script type="module" src="/scripts/script.js"></script>
     <script src="/scripts/toggleTheme.js"></script>
 </body>
 </html>
