--- a/src/views/tumbnails.ejs
+++ b/src/views/tumbnails.ejs
@@ -13,28 +13,17 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
-    <header>
-            <div class="menu-section">
-                <div>
-                    <a href="/">
-                        <button type="button" id="back-button"><i class="ph-arrow-left ph-2x"></i></button>
-                    </a>
-                </div>
-                <div class="theme" onclick="ToggleTheme.toggleTheme()">
-                    <button type="button"></button>
-                </div>
-            </div>
-        </header>
+    <%- include('parts/page-header', {isbackreturn: true,href: '/'})  %> 
     
     <main>
         <div>
-            <button id="edit" onclick="Tumbnails.toggleMenuForExclusion()">Editar</button>
+            <button id="edit">Editar</button>
         </div>
         <div class="tumbnails"></div>
     </main>
     
-    <script src="/scripts/script.js"></script>
+    <script type="module" src="/scripts/tumbnails.js"></script>
+    <script type="module" src="/scripts/script.js"></script>
     <script src="/scripts/toggleTheme.js"></script>
-    <script src="/scripts/tumbnails.js"></script>
 </body>
 </html>
