--- a/src/views/yt-video.ejs
+++ b/src/views/yt-video.ejs
@@ -14,18 +14,7 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
-    <header>
-        <div class="menu-section">
-            <div>
-                <a id="yt-video">
-                    <button type="button" id="back-button"><i class="ph-arrow-left ph-2x"></i></button>
-                </a>
-            </div>
-            <div class="theme" onclick="ToggleTheme.toggleTheme()">
-                <button type="button"></button>
-            </div>
-        </div>
-    </header>
+    <%- include('parts/page-header', {isbackreturn: true, href: ''})  %> 
     
     <main>
         <div class="yt-video flex">
@@ -33,8 +22,8 @@
         </div>
     </main>
 
-    <script src="/scripts/script.js"></script>
+    <script type="module" src="/scripts/script.js"></script>
     <script src="/scripts/toggleTheme.js"></script>
-    <script src="/scripts/video.js"></script>
+    <script type="module" src="/scripts/video.js"></script>
 </body>
 </html>
