--- a/src/views/parts/page-header.ejs
+++ b/src/views/parts/page-header.ejs
@@ -2,8 +2,10 @@
     <div class="menu-section">
     <% if (isbackreturn) { %>
         <div>
-            <a href="<%= href %> ">
-                <button type="button" id="back-button"><i class="ph-arrow-left ph-2x"></i></button>
+            <a href="<%= href %>">
+                <button type="button" id="back-button">
+                    <img src="/images/arrow-left.svg" alt="">
+                </button>
             </a>
         </div>
     <% } %> 
