feat: add tag head with ejs

--- a/src/views/yt-video.ejs
+++ b/src/views/yt-video.ejs
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>yt-video</title>
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/pages/yt-video.css">
-    <link rel="stylesheet" href="/styles/partials/inputs.css">
-    <link rel="stylesheet" href="/styles/partials/scrollbar.css">
 
-</head>
+<%- include('parts/page-head', {title: 'yt-video', stylesheets: ['/styles/pages/yt-video.css']}) %> 
+
 <body>
     
     <%- include('parts/page-header', {isbackreturn: true, href: ''})  %> 
